# trevec

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cursor/rules/: trevec.mdc
.github/workflows/: ci.yml
crates/trevec-brain/: Cargo.toml
crates/trevec-brain/src/: cache.rs  integration.rs  lib.rs  queue.rs  retention.rs
crates/trevec-brain/src/inference/: cloud.rs  mod.rs
crates/trevec-brain/src/workers/: entity_resolver.rs  intent_summarizer.rs  link_predictor.rs  mod.rs  observation_agent.rs
crates/trevec-cli/: Cargo.toml
crates/trevec-cli/src/: main.rs  telemetry.rs
crates/trevec-cli/src/commands/: doctor.rs  index.rs  init.rs  inspect.rs  memory.rs  mod.rs  projects.rs  query.rs  rules.rs  serve.rs  setup.rs  stats.rs  telemetry_cmd.rs  update.rs  watch.rs
crates/trevec-core/: Cargo.toml
crates/trevec-core/src/: config.rs  id.rs  lib.rs  model.rs  token_budget.rs  universal.rs
crates/trevec-index/: Cargo.toml
crates/trevec-index/src/: embedder.rs  graph.rs  ingest.rs  lib.rs  memory_store.rs  store.rs
crates/trevec-index/src/memory/: claude_code.rs  codex.rs  cursor.rs  gc.rs  meta.rs  mod.rs  scrub.rs
crates/trevec-index/tests/: e2e_no_model.rs
crates/trevec-node/: Cargo.toml
crates/trevec-node/src/: lib.rs
crates/trevec-parse/: Cargo.toml
crates/trevec-parse/src/: conversation.rs  document.rs  edges.rs  extract.rs  languages.rs  lib.rs  registry.rs  walker.rs
crates/trevec-python/: Cargo.toml  pyproject.toml
crates/trevec-python/src/: lib.rs
crates/trevec-retrieve/: Cargo.toml
crates/trevec-retrieve/src/: bundle.rs  compress.rs  expander.rs  lib.rs  search.rs
crates/trevec-sdk/: Cargo.toml
crates/trevec-sdk/src/: integrations.rs  lib.rs
docs/: claude-improve-indexing-speed-with-sorting.md
fixtures/src/: api.py  auth.rs  database.ts  server.go  utils.js
scripts/: install.ps1  install.sh
sdks/node/: LICENSE  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
sdks/node-native/: index.d.ts  index.js  package-lock.json  package.json
sdks/node/native/: loader.js
sdks/node/src/: entry.ts  index.ts
sdks/python/: README.md  pyproject.toml
sdks/python/trevec/: __init__.py
