[package]
name = "trevec-brain"
description = "Progressive Intelligence Engine — async LLM enrichment for Trevec"
version.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
trevec-core = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }
