[package]
name = "trevec"
description = "CLI and MCP server for Trevec code context retrieval"
version.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "trevec"
path = "src/main.rs"

[dependencies]
trevec-core = { workspace = true }
trevec-parse = { workspace = true }
trevec-index = { workspace = true }
trevec-retrieve = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
rmcp = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
notify = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
