[package]
name = "trevec-index"
description = "Indexing, embedding, and storage layer for Trevec"
version.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
cuda = ["fastembed/ort-load-dynamic", "dep:ort"]

[dependencies]
trevec-core = { workspace = true }
trevec-parse = { workspace = true }
lancedb = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
fastembed = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

blake3 = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
tempfile = { workspace = true }
ort = { version = "2.0.0-rc.11", optional = true, default-features = false }

[dev-dependencies]
