[package]
name = "trevec-python"
description = "Python bindings for Trevec Universal Context Graph"
version.workspace = true
edition.workspace = true
homepage.workspace = true

[lib]
name = "trevec"
crate-type = ["cdylib"]

[dependencies]
trevec-core = { workspace = true }
trevec-parse = { workspace = true }
trevec-index = { workspace = true }
trevec-brain = { path = "../trevec-brain" }
trevec-sdk = { path = "../trevec-sdk" }
pyo3 = { version = "0.23", features = ["extension-module"] }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
