[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "trevec"
version = "0.1.3"
description = "Universal Context Graph for AI Agents — fast, structured code context retrieval"
readme = "../../sdks/python/README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "Ibrahim Wynters", email = "hello@trevec.dev"},
]
keywords = ["ai", "agents", "memory", "context", "retrieval", "code", "graph", "mcp", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://trevec.dev"
Repository = "https://github.com/trevec-dev/trevec"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "trevec"
