[package]
name = "trevec-sdk"
description = "Trevec SDK — Universal Context Graph for AI agents"
version.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
trevec-core = { workspace = true }
trevec-parse = { workspace = true }
trevec-index = { workspace = true }
trevec-retrieve = { workspace = true }
trevec-brain = { path = "../trevec-brain" }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }
